import("//build/dotfile_settings.gni")

buildconfig = "//build/config/BUILDCONFIG.gn"

declare_args() {
}

no_check_targets = [
  # //v8, https://crbug.com/v8/7330
  "//v8/src/inspector:inspector",  # 20 errors
  "//v8/test/cctest:cctest_sources",  # 15 errors
  "//v8/test/unittests:inspector_unittests_sources",  # 2 errors
  "//v8:cppgc_base",  # 1 error
  "//v8:v8_internal_headers",  # 11 errors
  "//v8:v8_libplatform",  # 2 errors
]

exec_script_whitelist =
    build_dotfile_settings.exec_script_whitelist + [
      # Whitelist entries for //build should go into
      # //build/dotfile_settings.gni instead, so that they can be shared
      # with other repos. The entries in this list should be only for files
      # in the Chromium repo outside of //build.
      "//build_overrides/build.gni",
      "//chrome/android/webapk/shell_apk/prepare_upload_dir/BUILD.gn",
      "//chrome/version.gni",

      # TODO(dgn): Layer violation but breaks the build otherwise, see
      # https://crbug.com/474506.
      "//clank/java/BUILD.gn",
      "//clank/native/BUILD.gn",
      "//google_apis/BUILD.gn",
      "//printing/BUILD.gn",
      "//remoting/host/installer/linux/BUILD.gn",
      "//remoting/remoting_version.gni",
      "//remoting/host/installer/win/generate_clsids.gni",
      "//tools/grit/grit_rule.gni",
      "//tools/gritsettings/BUILD.gn",
    ]
