import("//build/dotfile_settings.gni")

buildconfig = "//build/config/BUILDCONFIG.gn"
script_executable = "python3"

export_compile_commands = [ ":helloworld" ]

declare_args() {
  v8_enable_test_features = false
  v8_enable_fuzztest = false
  v8_embedder_string = "v8-template"

  clang_use_chrome_plugins = false
  is_component_build = false
  linux_use_bundled_binutils = false
  use_dummy_lastchange = true
  use_sysroot = false
  simple_template_names = false

  # Minimize size of debuginfo in distributed static library.
  line_tables_only = true
  no_inline_line_tables = true
  symbol_level = 1
  use_debug_fission = false
}

check_targets = [ "*" ]

# no_check_targets = [
#   # //v8, https://crbug.com/v8/7330
#   "//v8/src/inspector:inspector",  # 20 errors
#   "//v8/test/cctest:cctest_sources",  # 15 errors
#   "//v8/test/unittests:inspector_unittests_sources",  # 2 errors
#   "//v8:cppgc_base",  # 1 error
#   "//v8:v8_internal_headers",  # 11 errors
#   "//v8:v8_libplatform",  # 2 errors
# ]

