# from https://chromium.googlesource.com/chromium/src/+/refs/heads/main/build_overrides/gtest.gni
# blob: aaf69a81293259e02ae73c1091729eb6a5a26072 

# Copyright 2016 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
# Exclude support for registering main function in multi-process tests.
gtest_include_multiprocess = true

# Exclude support for platform-specific operations across unit tests.
gtest_include_platform_test = true

# Exclude support for testing Objective C code on OS X and iOS.
gtest_include_objc_support = true

# Exclude support for flushing coverage files on iOS.
gtest_include_ios_coverage = true
